feat: get recs for book in admin panel
