# storage/api-docs/api-docs.json
@@ -366,6 +366,49 @@
                 }
             }
         },
+        "api/v1/admin/books/{id}/recs": {
+            "get": {
+                "tags": [
+                    "Админ-панель | Книги"
+                ],
+                "summary": "Рекомендации для книги",
+                "description": "Получение совпадающих книг",
+                "operationId": "admin.books.recs",
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Bearer {token}",
+                        "required": true,
+                        "schema": {
+                            "type": "bearerAuth"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Успешная выборка",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/RecsCollection"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Пользователь не авторизован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedException"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "api/v1/login": {
             "post": {
                 "tags": [
@@ -633,6 +676,25 @@
                     }
                 ]
             },
+            "RecsCollection": {
+                "description": "Коллекция рекомендаций",
+                "type": "object",
+                "allOf": [
+                    {
+                        "properties": {
+                            "data": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/RecsResource/allOf/0/properties/data"
+                                }
+                            }
+                        }
+                    },
+                    {
+                        "$ref": "#/components/schemas/CollectionResource"
+                    }
+                ]
+            },
             "CollectionResource": {
                 "description": "Коллекция записей",
                 "properties": {
@@ -868,6 +930,50 @@
                                         "description": "Дата последнего обновления",
                                         "type": "datetime",
                                         "example": "2021-01-01 10:00:00"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    },
+                    {
+                        "$ref": "#/components/schemas/SingleResource"
+                    }
+                ]
+            },
+            "RecsResource": {
+                "description": "Ресурс книги",
+                "type": "object",
+                "allOf": [
+                    {
+                        "properties": {
+                            "data": {
+                                "properties": {
+                                    "book": {
+                                        "$ref": "#/components/schemas/BookResource/allOf/0/properties/data"
+                                    },
+                                    "matching_book": {
+                                        "$ref": "#/components/schemas/BookResource/allOf/0/properties/data"
+                                    },
+                                    "author_score": {
+                                        "description": "Очки совпадения за автора",
+                                        "type": "integer",
+                                        "example": "1"
+                                    },
+                                    "genres_score": {
+                                        "description": "Очки совпадения за жанры",
+                                        "type": "integer",
+                                        "example": "4"
+                                    },
+                                    "description_score": {
+                                        "description": "Очки совпадения за описание",
+                                        "type": "float",
+                                        "example": "25.05"
+                                    },
+                                    "total_score": {
+                                        "description": "Суммарное число очков",
+                                        "type": "integer",
+                                        "example": "1"
                                     }
                                 },
                                 "type": "object"
